HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureParamInference/Expected.uv
//! Expected diagnostic metadata for the ClosureParamInference rejected-source specimen.

expectedDiagnostic("E-SEM-2591", "rule.16.Infer-Closure-Params-Err")
